# herdeck

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.toml  local.example.toml  pyproject.toml
.build/page/: dummy.txt  manifest.json
.github/workflows/: ci.yml  release.yml
deploy/: com.herdeck.app.plist  dev.herdeck.bridge.plist  dev.herdeck.web.plist  herdeck-bridge.service
desktop/: .gitignore  README.md  herdeck-deckapp.spec  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
desktop/scripts/: build-app.sh  build-sidecar.sh  deckapp-entry.py  make-icon-source.py  smoke-sidecar.sh  verify-macos-sidecar-signing.sh
desktop/src/: App.svelte  ConfigApp.svelte  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: hotkey.rs  http.rs  lib.rs  main.rs  sidecar.rs  window_mode.rs
desktop/src-tauri/tests/: hotkey.rs  http.rs  spawn.rs
desktop/src/lib/: Banner.svelte  DeckPlaceholder.svelte  DeckView.svelte  Onboarding.svelte  configClient.test.ts  configClient.ts  configDefaults.json  deckClient.test.ts  deckClient.ts  help.ts  i18n.svelte.ts  onboarding.smoke.test.ts  onboardingClient.test.ts  onboardingClient.ts  pollGate.test.ts  pollGate.ts  sidecar.test.ts  sidecar.ts  statusColors.test.ts  statusColors.ts  updateClient.test.ts  updateClient.ts  windowFit.test.ts  windowFit.ts
docs/: agent-setup.md  persos-cockpit.md
docs/og-images/: index.html
docs/superpowers/plans/: 2026-06-18-deck-v2.md  2026-06-18-herdeck.md  2026-06-19-zero-config-local.md  2026-06-20-elgato-driver.md  2026-06-20-polish.md  2026-06-20-status-panel-spotlight.md  2026-06-21-ci-matrix.md  2026-06-21-customization-profiles.md  2026-06-21-doctor.md  2026-06-21-herdeck-ctl.md  2026-06-21-notifications.md  2026-06-21-telegram-notifications.md  2026-06-21-tile-multiserver.md  2026-06-21-web-polish.md  2026-06-22-d200x-driver.md  2026-06-22-elgato-packaging.md  2026-06-22-elgato-plugin.md  2026-06-22-elgato-ts-shell.md  2026-06-24-config-editor-backend.md  2026-06-24-config-model-unification.md  2026-06-24-configurable-agent-tile-lines.md  2026-06-25-config-editor-frontend-sections.md  2026-06-25-config-editor-frontend-transport.md  2026-06-26-config-editor-frontend-4b-i.md  2026-06-26-config-editor-frontend-4b-ii-alpha.md  2026-06-26-config-editor-frontend-4b-ii-beta1.md  2026-06-27-config-editor-frontend-4b-ii-beta2.md  2026-06-27-config-editor-klik-to-jump.md  2026-06-27-telegram-interactive-notifications.md  2026-06-28-desktop-app-phase3a-frozen-sidecar.md  (+12 more)
scripts/: e2e_verify.py  generate-update-manifest.py  render-og-image.py  set-version.py
src/herdeck/: app.py  app_control.py  bootstrap.py  bridge.py  commands.py  config.py  connector.py  ctl.py  decisions.py  doctor.py  frozen.py  i18n.py  icons.py  layout.py  model.py  notify.py  orchestrator.py  protocol.py  runtime.py  secrets.py  semantic_api.py  service.py  settings.py  telegram.py  update.py  usage.py  usage_cli.py  web.py
streamdeck/: .gitignore  herdeck-backend.spec  package-lock.json  package.json  rollup.config.mjs  tsconfig.json
streamdeck/scripts/: build-plugin.sh  herdeck-backend-entry.py
streamdeck/src/: adapter.ts  backend-process.ts  connection.ts  ipc-client.ts  plugin.ts  protocol.ts  registry.ts
streamdeck/tests/: actions.test.ts  adapter-lifecycle.test.ts  adapter.test.ts  backend-process.test.ts  bundled-discovery.test.ts  connection.test.ts  ipc-client.test.ts  manifest.test.ts  packaging.test.ts  property-inspector.test.ts  protocol.test.ts  registry.test.ts  sdk-actions.test.ts
streamdeck/xyz.vaclavik.herdeck.sdPlugin/: manifest.json
tests/: test_agent_setup_docs.py  test_app.py  test_app_control.py  test_app_semantic.py  test_bootstrap.py  test_bootstrap_socket_path.py  test_bridge.py  test_bundled_agent_icons.py  test_commands.py  test_config.py  test_config_service.py  test_config_watcher.py  test_connector.py  test_ctl_cli.py  test_ctl_e2e.py  test_ctl_session.py  test_d200_panel.py  test_d200_sink.py  test_deckapp.py  test_deckapp_entry.py  test_deckapp_frozen_icons.py  test_deckapp_live.py  test_deckapp_local_bridge.py  test_deckapp_local_wiring.py  test_deckapp_onboarding.py  test_deckapp_probe.py  test_deckapp_selftest.py  test_deckapp_setup_routes.py  test_deckapp_source_kind.py  test_desktop_defaults_contract.py  test_discovery.py  test_doctor.py  test_driver_base.py  test_driver_elgato.py  test_driver_fake.py  test_driver_web.py  test_e2e_verify.py  test_elgato_frozen.py  test_elgato_ipc.py  test_elgato_protocol.py  (+33 more)
(+98 files in other folders)
