[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "herdeck"
version = "0.1.0"
description = "Stream Deck dashboard for AI coding agents running under herdr"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Filip Vaclavik" }]
keywords = [
  "ai", "ai-agents", "coding-agents", "claude", "codex", "dashboard",
  "herdr", "stream-deck", "elgato", "tauri", "cli", "developer-tools",
]
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Topic :: Terminals",
  "Operating System :: MacOS",
  "Operating System :: POSIX",
]
dependencies = ["websockets>=14"]

[project.urls]
Homepage = "https://github.com/vaclavik-xyz/herdeck"
Repository = "https://github.com/vaclavik-xyz/herdeck"

[project.optional-dependencies]
# strmdck (rc) under-declares its runtime deps, so pin them explicitly.
deck = ["strmdck", "pillow>=10", "cairosvg", "deepdiff", "python-dotenv", "hidapi", "keyring", "tomli-w"]
elgato = ["streamdeck", "pillow>=10"]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "pillow>=10", "cairosvg", "ruff", "pytest-cov", "keyring", "tomli-w"]
# Frozen-backend packaging (Elgato plugin): PyInstaller 6 (onedir layout), the build-time
# SVG rasterizer (cairosvg), and the frozen elgato-path runtime deps that must be importable
# so PyInstaller can trace them (pillow, websockets). `pip install -e .[packaging]` makes the
# build-plugin.sh pipeline reproducible in a clean env.
packaging = ["pyinstaller>=6", "cairosvg", "pillow>=10", "websockets>=14", "keyring", "tomli-w"]

[project.scripts]
herdeck = "herdeck.app:main"
herdeck-bridge = "herdeck.bridge:main"
herdeck-doctor = "herdeck.doctor:main"
herdeck-ctl = "herdeck.ctl:main"
herdeck-web = "herdeck.web:main"
herdeck-service = "herdeck.service:main"
herdeck-usage = "herdeck.usage_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
herdeck = ["assets/*.svg", "assets/*.png", "assets/web/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Long lines are tolerated because rendering code and fixtures contain wide literals.
# Keep Status as str+Enum to preserve the existing public/runtime enum contract.
ignore = ["E501", "UP042"]
